candidate to student

--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -22,7 +22,7 @@ table, th, td {
   </h2>
     </li>
     <li class="email">
-    Ph.D. Candidate   
+    Ph.D. Student   
  </li>
     <li class="email">
    <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
