--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -79,13 +79,13 @@ table, th, td {
 
     {% if profileinfo.linkedin %}
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">{{ profileinfo.linkedin }}</a>
+      <a href="https://linkedin.com/in/lokender" target="_blank">lokedner</a>
     </li>
     {% endif %}
 
     {% if profileinfo.github %}
     <li class="github"><i class="fab fa-github"></i>
-      <a href="http://github.com/{{ sidebar.github }}" target="_blank">{{ profileinfo.github }}</a>
+      <a href="http://github.com/lokender" target="_blank">lokender</a>
     </li>
     {% endif %}
 
