--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -54,17 +54,12 @@ table, th, td {
 
  <ul class="list-unstyled contact-list">
 
-    {% if profileinfo.email1 %}
-    <li class="email"><i class="fas fa-envelope"></i>
-      <a href="mailto:{{ sidebar.email }}">{{ profileinfo.email1 }}</a>
+    
+    <li class="email"><i class="fas fa-envelope"></i> lokendert at iiitd dot ac dot in
     </li>
-    {% endif %}
-
-    {% if profileinfo.email2 %}
-    <li class="email"><i class="fas fa-envelope"></i>
-      <a href="mailto:{{ sidebar.email }}">{{ profileinfo.email2 }}</a>
+    
+   <li class="email"><i class="fas fa-envelope"></i> lokender at outlook dot com
     </li>
-    {% endif %}
 <!--    {% if sidebar.phone %}
     <li class="phone"><i class="fas fa-phone"></i>
       <a href="tel:{{ sidebar.phone }}">{{ sidebar.phone }}</a>
