--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -27,6 +27,19 @@ table, th, td {
     <li class="email">
    <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
  </li>
+         <li class="email"><i class="fas fa-envelope"></i> lokendert at iiitd dot ac dot in
+    </li>
+    
+   <li class="email"><i class="fas fa-envelope"></i> lokender at outlook dot com
+    </li>
+    <li class="linkedin"><i class="fab fa-linkedin"></i>
+      <a href="https://linkedin.com/in/lokender" target="_blank">lokender</a>
+    </li>
+    
+    <li class="github"><i class="fab fa-github"></i>
+      <a href="http://github.com/lokender" target="_blank">lokender</a>
+    </li>
+     
 </ul>
 </th>
 
@@ -54,23 +67,22 @@ table, th, td {
 
  <ul class="list-unstyled contact-list">
 
-    
+<!--    
     <li class="email"><i class="fas fa-envelope"></i> lokendert at iiitd dot ac dot in
     </li>
     
    <li class="email"><i class="fas fa-envelope"></i> lokender at outlook dot com
     </li>
-<!--    {% if sidebar.phone %}
+    {% if sidebar.phone %}
     <li class="phone"><i class="fas fa-phone"></i>
       <a href="tel:{{ sidebar.phone }}">{{ sidebar.phone }}</a>
     </li>
     {% endif %}
--->
-  <!-- 
+
     <li class="website"><i class="fas fa-globe-americas"></i>
       <a href="https://medium.com/3dcomputervision" target="_blank">3DVision Blog</a>
     </li>
-  -->
+
     <li class="linkedin"><i class="fab fa-linkedin"></i>
       <a href="https://linkedin.com/in/lokender" target="_blank">lokender</a>
     </li>
@@ -78,7 +90,7 @@ table, th, td {
     <li class="github"><i class="fab fa-github"></i>
       <a href="http://github.com/lokender" target="_blank">lokender</a>
     </li>
-    
+    -->
     {% if profileinfo.gitlab %}
     <li class="gitlab"><i class="fab fa-gitlab"></i>
       <a href="http://gitlab.com/{{ sidebar.gitlab }}" target="_blank">{{ profileinfo.gitlab }}</a>
