--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -22,11 +22,11 @@ table, th, td {
   </h2>
     </li>
     <li class="email">
-    Ph.D. Student   
+    Ph.D. Student @ <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
  </li>
-    <li class="email">
+<!--    <li class="email">
    <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>
- </li>
+ </li> -->
          <li class="email"><i class="fas fa-envelope"></i> lokendert at iiitd dot ac dot in
     </li>
     
