--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -33,7 +33,8 @@ table, th, td {
    <li class="email"><i class="fas fa-envelope"></i> lokender at outlook dot com
     </li>
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      <a href="https://linkedin.com/in/lokender" target="_blank">lokender</a>
+      <a href="https://linkedin.com/in/lokender" target="_blank">lokender</a>, <i class="fab fa-github"></i>
+      <a href="http://github.com/lokender" target="_blank">lokender</a>
     </li>
     
     <li class="github"><i class="fab fa-github"></i>
