--- a/_includes/career-profile.html
+++ b/_includes/career-profile.html
@@ -34,8 +34,8 @@ table, th, td {
    <li class="email"><i class="fas fa-envelope"></i> lokender at outlook dot com
     </li>
     <li class="linkedin"><i class="fab fa-linkedin"></i>
-      [<a href="https://linkedin.com/in/lokender" target="_blank">Linkedin</a>] <i class="fab fa-github"></i>
-      [<a href="http://github.com/lokender" target="_blank">GitHub</a>]
+      <a href="https://linkedin.com/in/lokender" target="_blank">Linkedin</a> <i class="fab fa-github"></i>
+      <a href="http://github.com/lokender" target="_blank">GitHub</a>
     </li>
    
      
