--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -20,7 +20,7 @@
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
     </span>
-    Awards/Honor/Grants/Fellowships
+    Awards/Fellowships
   </h2>
 
 <ul>
