--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -23,7 +23,7 @@
     Latest
   </h2>
 <ul>
-  <li>[2019/05] I will intern at <a href="http://www.nec-labs.com">NEC Labs America</a>, advised by <a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran</a>. </li>
+  <li>[2019/05] I will be an intern at <a href="http://www.nec-labs.com">NEC Labs America</a>, advised by <a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran</a>. (Summer 2019) </li>
 </ul>   
 <hr>
 
