--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -53,6 +53,15 @@
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
     </span>
+    Patents
+  </h2>
+	  
+<hr>	  
+  <h2 class="section-title">
+    <span class="fa-stack fa-xs">
+      <i class="fas fa-circle fa-stack-2x"></i>
+      <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
+    </span>
     Publications
   </h2>
 
