--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -55,7 +55,11 @@
     </span>
     Patents
   </h2>
-	  
+  <div class="item">
+    <div class="publication-title">DGSAC: Density Guided SAmpling and Consensus</div>
+    <div class="publication-authors">L. Tiwari and S. Anand</div>
+    <div class="publication-conference"><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
+    [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br></br>
 <hr>	  
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
