--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -53,13 +53,13 @@
       <i class="fas fa-circle fa-stack-2x"></i>
       <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
     </span>
-    Patents
+    Patent Applications
   </h2>
   <div class="item">
-    <div class="publication-title">DGSAC: Density Guided SAmpling and Consensus</div>
-    <div class="publication-authors">L. Tiwari and S. Anand</div>
-    <div class="publication-conference"><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
-    [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br></br>
+    <div class="publication-title">Pseudo RGB-D: Exploiting Learned Depth for Robust SfM</div>
+    <div class="publication-authors">Q.-H. Tran, L. Tiwari, P. Ji, and M. Chandraker</div>
+    <div class="publication-conference"><a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a> </div>
+    (provisional application, filed on Aug 2019)</br></br>
 <hr>	  
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
