--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -58,8 +58,8 @@
   <div class="item">
     <div class="publication-title">Pseudo RGB-D: Exploiting Learned Depth for Robust SfM</div>
     <div class="publication-authors">Q.-H. Tran, L. Tiwari, P. Ji, and M. Chandraker</div>
-    <div class="publication-conference"><a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a> </div>
-    (provisional application, filed on Aug 2019)</br></br>
+    <div class="publication-conference"><a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a> (provisional application, filed on Aug 2019) </div>
+    </br></br>
 <hr>	  
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
