--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -14,6 +14,55 @@
 <li> Computer Vision for Autonomous Driving</li>
 </ul>
 
+<strong>Work Experiance:</strong>
+<ul>
+<li> Robust Geometric Computer Vision (2D and 3D) </li>
+<li> Deep Learning For Geometric Computer Vision</li>
+<li> Robust Statistical Methods For Robust Deep Learning</li>
+<li> Image Based 3D Modeling</li>
+<li> Computer Vision for Autonomous Driving</li>
+</ul>
+
+
+<h4 id="recent-research"><a href=""><strong>Conferences</strong></a></h4>
+  <div class="item">
+    <div class="publication-title">DGSAC: Density Guided SAmpling and Consensus</div>
+    <div class="publication-authors">L. Tiwari and S. Anand</div>
+    <div class="publication-conference"><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
+    [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br></br>
+
+
+    <div class="publication-title">Robust Multi-Model Fitting using Density and Preference Analysis</div>
+    <div class="publication-authors">L. Tiwari, S. Anand and S. Mittal.</div>
+    <div class="publication-conference"><a href="http://www.accv2016.org/">ACCV 2016</a>, Taipei, Taiwan.</div>
+    [<a href="https://doi.org/10.1007/978-3-319-54190-7_19">Paper</a>], [<a href="dpa_poster.pdf">Poster</a>], [<a href="">Code</a>] </br></br>
+
+    <div class="publication-title">Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting</div>
+    <div class="publication-authors">L. Tiwari and S. Anand</div>
+    <div class="publication-conference"><a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html">IEEE ICIP 2016</a>, Phoenix, Arizona, USA.</div>
+  [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="fhf_poster.pdf">Poster</a>], [<a href="">Code</a>]
+
+ </br></br>
+
+    <div class="publication-title">Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing</div>
+    <div class="publication-authors">L. Tiwari, B. Kumar and T. Patnaik.</div>
+    <div class="publication-conference">IEEE ICIT, 2014, Orissa, India</div>
+ [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>]
+
+
+  </div><!--//item-->
+
+<h4 id="recent-research">Symposium/Workshops</h4>
+  <div class="item">
+    <div class="publication-title">Robust Estimation in Geometric Computer Vision</div>
+    <div class="publication-authors">L. Tiwari</div>
+    <div class="publication-conference"><a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016</a>, IIT-Guwahati, India</div> </br> 
+   <div class="publication-title">Geometric Model Fiting Game</div>
+    <div class="publication-authors">L. Tiwari and S. Anand.</div>
+    <div class="publication-conference"><a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Symposium on Optimization, 2016, IIT-Kanpur, India</a></div>
+</div><!--//item-->
+
+
 <hr>
    <h2 class="section-title">
     <span class="fa-stack fa-xs">
