--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -14,17 +14,25 @@
 <li> Computer Vision for Autonomous Driving</li>
 </ul>
 
-<strong>Work Experiance:</strong>
+<strong>Awards and Fellowships:</strong>
 <ul>
-<li> Robust Geometric Computer Vision (2D and 3D) </li>
-<li> Deep Learning For Geometric Computer Vision</li>
-<li> Robust Statistical Methods For Robust Deep Learning</li>
-<li> Image Based 3D Modeling</li>
-<li> Computer Vision for Autonomous Driving</li>
-</ul>
+  <li><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a> Ph.D. Forum Travel Award</li>
+  <li>2nd Prize, Poster Session, Research Showcase 2017 @ <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>.</li>
+  <li>Best Doctoral Symposium Award (3rd), <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php"> ICVGIP'2016</a></li>
+  <li>IEEE Signal Processing Society, Travel Award to attend <a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html">IEEE ICIP 2016</a.</li>
+  <li><a href="https://phd.medialabasia.in/">Visvesvarya Ph.D. Fellowship</a>, Jul 2014- Dec 2019. </li>
+  <li>Graduate Fellowship, GATE (Top 4% in India), Jul 2012- Jun 2014. </li>
+  <li>University Topper and <a href="https://lokender.github.io/gold.html"><font color="orange"><b>Chancellor's Gold Medal</b></font></a> in B.Tech CSE. </li>
+  <li>Academic Merit Award for the year 2003, 2004, 2005. </li>
+  <li> Best student of the year 2003. </li>
+</ul>  
 
+<ol>
+  <li>DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus</li>
+</ol> 
+	  
 
-<h4 id="recent-research"><a href=""><strong>Conferences</strong></a></h4>
+<h3 id="recent-research"><a href=""><strong>Conferences</strong></a></h3>
   <div class="item">
     <div class="publication-title">DGSAC: Density Guided SAmpling and Consensus</div>
     <div class="publication-authors">L. Tiwari and S. Anand</div>
@@ -74,28 +82,7 @@
 <ul>
   <li>[05/19] I will be an intern at <a href="http://www.nec-labs.com">NEC Labs America</a>, advised by <a href="https://cs.adelaide.edu.au/~huy/home.php">Quoc-Huy Tran</a>. (Summer 2019) </li>
 </ul>   
-<hr>
-
-<hr>
-   <h2 class="section-title">
-    <span class="fa-stack fa-xs">
-      <i class="fas fa-circle fa-stack-2x"></i>
-      <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
-    </span>
-    Awards/Fellowships
-  </h2>
-
-<ul>
-  <li><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a> Ph.D. Forum Travel Award</li>
-  <li>2nd Prize, Poster Session, Research Showcase 2017 @ <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>.</li>
-  <li>Best Doctoral Symposium Award (3rd), <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php"> ICVGIP'2016</a></li>
-  <li>IEEE Signal Processing Society, Travel Award to attend <a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html">IEEE ICIP 2016</a.</li>
-  <li><a href="https://phd.medialabasia.in/">Visvesvarya Ph.D. Fellowship</a>, Jul 2014- Dec 2019. </li>
-  <li>Graduate Fellowship, GATE (Top 4% in India), Jul 2012- Jun 2014. </li>
-  <li>University Topper and <a href="https://lokender.github.io/gold.html"><font color="orange"><b>Chancellor's Gold Medal</b></font></a> in B.Tech CSE. </li>
-  <li>Academic Merit Award for the year 2003, 2004, 2005. </li>
-  <li> Best student of the year 2003. </li>
-</ul>  
+<hr> 
 <hr>
   <h2 class="section-title">
     <span class="fa-stack fa-xs">
