--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -14,7 +14,7 @@
 <li> Computer Vision for Autonomous Driving</li>
 </ul>
 
-<strong>Awards and Fellowships:</strong>
+<strong><h3>Awards and Fellowships:</h3></strong>
 <ul>
   <li><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a> Ph.D. Forum Travel Award</li>
   <li>2nd Prize, Poster Session, Research Showcase 2017 @ <a href="https://www.iiitd.ac.in/">IIIT-Delhi</a>.</li>
@@ -27,9 +27,6 @@
   <li> Best student of the year 2003. </li>
 </ul>  
 
-<ol>
-  <li>DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus DGSAC: Density Guided SAmpling and Consensus</li>
-</ol> 
 	  
 
 <h3 id="recent-research"><a href=""><strong>Conferences</strong></a></h3>
