--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -29,27 +29,27 @@
 
 	  
 
-<h3 id="recent-research"><a href=""><strong>Conferences</strong></a></h3>
+<h3 id="recent-research"><a href=""><strong>Publications</strong></a></h3>
   <div class="item">
-    <div class="publication-title">DGSAC: Density Guided SAmpling and Consensus</div>
+    <div class="publication-title">[C4] DGSAC: Density Guided SAmpling and Consensus</div>
     <div class="publication-authors">L. Tiwari and S. Anand</div>
     <div class="publication-conference"><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
     [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br></br>
 
 
-    <div class="publication-title">Robust Multi-Model Fitting using Density and Preference Analysis</div>
+    <div class="publication-title">[C3] Robust Multi-Model Fitting using Density and Preference Analysis</div>
     <div class="publication-authors">L. Tiwari, S. Anand and S. Mittal.</div>
     <div class="publication-conference"><a href="http://www.accv2016.org/">ACCV 2016</a>, Taipei, Taiwan.</div>
     [<a href="https://doi.org/10.1007/978-3-319-54190-7_19">Paper</a>], [<a href="dpa_poster.pdf">Poster</a>], [<a href="">Code</a>] </br></br>
 
-    <div class="publication-title">Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting</div>
+    <div class="publication-title">[C2] Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting</div>
     <div class="publication-authors">L. Tiwari and S. Anand</div>
     <div class="publication-conference"><a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html">IEEE ICIP 2016</a>, Phoenix, Arizona, USA.</div>
   [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="fhf_poster.pdf">Poster</a>], [<a href="">Code</a>]
 
  </br></br>
 
-    <div class="publication-title">Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing</div>
+    <div class="publication-title">[C1] Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing</div>
     <div class="publication-authors">L. Tiwari, B. Kumar and T. Patnaik.</div>
     <div class="publication-conference">IEEE ICIT, 2014, Orissa, India</div>
  [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>]
@@ -59,10 +59,10 @@
 
 <h4 id="recent-research">Symposium/Workshops</h4>
   <div class="item">
-    <div class="publication-title">Robust Estimation in Geometric Computer Vision</div>
+    <div class="publication-title">[W2] Robust Estimation in Geometric Computer Vision</div>
     <div class="publication-authors">L. Tiwari</div>
     <div class="publication-conference"><a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016</a>, IIT-Guwahati, India</div> </br> 
-   <div class="publication-title">Geometric Model Fiting Game</div>
+   <div class="publication-title">[W1] Geometric Model Fiting Game</div>
     <div class="publication-authors">L. Tiwari and S. Anand.</div>
     <div class="publication-conference"><a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Symposium on Optimization, 2016, IIT-Kanpur, India</a></div>
 </div><!--//item-->
