--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -28,6 +28,13 @@
 </ul>  
 
 	  
+	  
+<h3><strong>Publications</strong></h3>
+[C4] DGSAC: Density Guided SAmpling and Consensus
+L. Tiwari and S. Anand
+<a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
+    [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] 
+
 
 <h3 id="recent-research"><a href=""><strong>Publications</strong></a></h3>
   <div class="item">
