--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -30,8 +30,8 @@
 	  
 	  
 <h3><strong>Publications</strong></h3>
-[C4] DGSAC: Density Guided SAmpling and Consensus
-L. Tiwari and S. Anand
+	  [C4] DGSAC: Density Guided SAmpling and Consensus </br>
+L. Tiwari and S. Anand </br>
 <a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
     [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] 
 
