--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -30,11 +30,15 @@
 	  
 	  
 <h3><strong>Publications</strong></h3>
-	  [C4] DGSAC: Density Guided SAmpling and Consensus </br>
+[C4] DGSAC: Density Guided SAmpling and Consensus </br>
 L. Tiwari and S. Anand </br>
-<a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA.</div>
-    [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] 
+<a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA. </br>
+[<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
+[C4] DGSAC: Density Guided SAmpling and Consensus </br>
+L. Tiwari and S. Anand </br>
+<a href="http://wacv18.uccs.us/">IEEE WACV 2018</a>, Lake Tahoe, Nevada, USA. </br>
+[<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
 <h3 id="recent-research"><a href=""><strong>Publications</strong></a></h3>
   <div class="item">
