--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -30,24 +30,24 @@
 	  
 	  
 <h3><strong>Publications</strong></h3>
-[C4] DGSAC: Density Guided SAmpling and Consensus </br>
+[<b>C4</b>] DGSAC: Density Guided SAmpling and Consensus </br>
 L. Tiwari and S. Anand </br>
-<a href="http://wacv18.uccs.us/">IEEE Winter Conference on Computer Vision (WACV) 2018</a> </br>
+<a href="http://wacv18.uccs.us/">IEEE Winter Conference on Computer Vision (WACV), 2018</a> </br>
 [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[C3] Robust Multi-Model Fitting using Density and Preference Analysis </br>
+[<b>C3</b>] Robust Multi-Model Fitting using Density and Preference Analysis </br>
 L. Tiwari, S. Anand and S. Mittal. </br>
-<a href="http://www.accv2016.org/">Asian Conference on Computer Vision (ACCV) 2016</a>, Lake Tahoe, Nevada, USA. </br>
+<a href="http://www.accv2016.org/">Asian Conference on Computer Vision (ACCV), 2016</a></br>
 [<a href="https://doi.org/10.1007/978-3-319-54190-7_19">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[C2] Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting </br>
+[<b>C2</b>] Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting </br>
 L. Tiwari and S. Anand. </br>
-<a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html/">IEEE International Conference on Image Processing (ICIP) 2016</a></br>
+<a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html/">IEEE International Conference on Image Processing (ICIP), 2016</a></br>
 [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[C1] Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing </br>
+[<b>C1</b>] Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing </br>
 L. Tiwari, B. Kumar and T. Patnaik. </br>
-<a href="">IEEE International Conference on Information Technology (ICIP) 2014</a></br>
+<a href="">IEEE International Conference on Information Technology (ICIT), 2014</a></br>
 [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
 
