--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -42,7 +42,7 @@ L. Tiwari, S. Anand and S. Mittal. </br>
 
 [<b>C2</b>] Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting </br>
 L. Tiwari and S. Anand. </br>
-<a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html/">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br>
+<a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html/">IEEE International Conference on Image Processing (ICIP), 2016</a></br>
 [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
 [<b>C1</b>] Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing </br>
@@ -52,12 +52,10 @@ L. Tiwari, B. Kumar and T. Patnaik. </br>
 
 
 [<b>W2</b>] Robust Estimation in Geometric Computer Vision</br>
-L. Tiwari </br>
-<a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">IEEE International Conference on Image Processing (ICIP), 2016</a></br>
+L. Tiwari. <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br>
 
 [<b>W1</b>]  Geometric Model Fiting Game </br>
-L. Tiwari. </br>
-<a href="">Symposium on Optimization, 2016, IIT-Kanpur, India</a></br>
+L. Tiwari. <a href="">Symposium on Optimization, 2016, IIT-Kanpur, India</a></br>
 
 
 
