--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -50,6 +50,10 @@ L. Tiwari, B. Kumar and T. Patnaik. </br>
 <a href="">IEEE International Conference on Information Technology (ICIT), 2014</a></br>
 [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>  </br> </br>  
 
+<h4><strong>PhD Forum/Symposium/Workshops</strong></h4>
+[<b>W3</b>] Robust Statistical Methods for Learning and Vision</br>
+L. Tiwari. <a href="http://wacv18.uccs.us/">PhD Forum, IEEE Winter Conference on Computer Vision (WACV), 2018</a> </br>
+<b>Mentor:</b> <a href="https://www.vast.uccs.edu/~tboult/resume.html">Prof. Terrance Boult, University of Colorado, Colorado Spring</a> </br>
 
 [<b>W2</b>] Robust Estimation in Geometric Computer Vision</br>
 L. Tiwari. <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br>
