--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -28,6 +28,14 @@
 </ul>  
 
 <hr>	  
+<strong><h4>Work Experiance:</h4></strong>
+<ul>
+	<li><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a> Ph.D. Forum Travel Award </br>
+	Faculty Mentors: Saket</li>
+  <li>[2014 - ] Swarath: Autonomous Last Mile Connectivity for Commuters </li>
+</ul>  
+
+<hr>
 	  
 <h4><strong>Publications</strong></h4>
 [<b>C4</b>] DGSAC: Density Guided SAmpling and Consensus </br>
