--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -30,9 +30,13 @@
 <hr>	  
 <strong><h4>Work Experiance:</h4></strong>
 <ul>
-	<li><a href="http://wacv18.uccs.us/">IEEE WACV 2018</a> Ph.D. Forum Travel Award </br>
-	Faculty Mentors: Saket</li>
-  <li>[2014 - ] Swarath: Autonomous Last Mile Connectivity for Commuters </li>
+	<li>[5/2019-8/2019] Real Time Robust SfM in the Wild </br>
+	<b>Role:</b> Research Assistant, NEC Laboratories America, Inc. Media Analytics Deparment</br> 
+        <b>Mentors:</b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>,<a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
+
+<li>[8/2014 - ] <b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</br>
+<b>Role:</b> Team member, Computer Vision Module</br> 
+<b>Mentor:</b><a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a></li>
 </ul>  
 
 <hr>
