--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -31,16 +31,17 @@
 <strong><h4>Work Experiance:</h4></strong>
 <ul>
 	<li>[5/2019-8/2019] Real Time Robust SfM in the Wild </br>
-	<b>Role:</b> Research Assistant, NEC Laboratories America, Inc. Media Analytics Deparment</br> 
-        <b>Mentors:</b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>,<a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
-
+	<b>Role:</b> Research Assistant, <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-people">NEC Laboratories America, Inc.</a> </br> 
+        <b>Mentors:</b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
+</br>
 <li>[8/2014 - ] <b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</br>
-<b>Role:</b> Team member, Computer Vision Module</br> 
+<b>Role:</b> Team member, Computer Vision Module, <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi</a> </br> 
 <b>Mentor:</b><a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a></li>
 </ul>  
 
 <hr>
 	  
+
 <h4><strong>Publications</strong></h4>
 [<b>C4</b>] DGSAC: Density Guided SAmpling and Consensus </br>
 L. Tiwari and S. Anand </br>
