--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -30,11 +30,11 @@
 <hr>	  
 <strong><h4>Work Experiance:</h4></strong>
 <ul>
-	<li>[5/2019-8/2019] Real Time Robust SfM in the Wild </br>
+	<li>[5/2019 - 8/2019] <i>Real Time Robust SfM in the Wild</i> </br>
 	<b>Role:</b> Research Assistant, <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-people">NEC Laboratories America, Inc.</a> </br> 
         <b>Mentors:</b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
 </br>
-<li>[8/2014 - ] <b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</br>
+<li>[8/2014 - ] <i><b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</i></br>
 <b>Role:</b> Team member, Computer Vision Module, <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi</a> </br> 
 <b>Mentor:</b><a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a></li>
 </ul>  
