--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -41,6 +41,12 @@
 
 <hr>
 	  
+<strong><h4>Patent Applications:</h4></strong>
+<i>Pseudo RGB-D: Exploiting Learned Depth for Robust SfM </i></br>
+<a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, Lokender Tiwari <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a></br>
+<a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.(provisional application, filed on Aug 2019) </a>  </br>
+
+<hr>
 
 <h4><strong>Publications</strong></h4>
 [<b>C4</b>] DGSAC: Density Guided SAmpling and Consensus </br>
