--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -32,7 +32,7 @@
 <ul>
 	<li>[5/2019 - 8/2019] <i>Real Time Robust SfM in the Wild</i> </br>
 	<b>Role:</b> Research Assistant, <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-people">NEC Laboratories America, Inc.</a> </br> 
-        <b>Mentors:</b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
+        <b>Mentors: </b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
 </br>
 <li>[8/2014 - ] <i><b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</i></br>
 <b>Role:</b> Team member, Computer Vision Module, <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi</a> </br> 
@@ -43,9 +43,8 @@
 	  
 <strong><h4>Patent Applications:</h4></strong>
 <i>Pseudo RGB-D: Exploiting Learned Depth for Robust SfM </i></br>
-<a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, Lokender Tiwari <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a></br>
-<a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.(provisional application, filed on Aug 2019) </a>  </br>
-
+<a href="http://www.nec-labs.com/quoc-huy-tran">Q.-H. Tran</a>, L. Tiwari, <a href="http://www.nec-labs.com/pan-ji">P. Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">M. Chandraker</a></br>
+<a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a> (provisional application, filed on Aug 2019)   </br>
 <hr>
 
 <h4><strong>Publications</strong></h4>
