--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -48,37 +48,56 @@
 <hr>
 
 <h4><strong>Publications</strong></h4>
-[<b>C4</b>] DGSAC: Density Guided SAmpling and Consensus </br>
+[<b>C4</b>] <i>DGSAC: Density Guided SAmpling and Consensus</i> </br>
 L. Tiwari and S. Anand </br>
 <a href="http://wacv18.uccs.us/">IEEE Winter Conference on Computer Vision (WACV), 2018</a> </br>
 [<a href="">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[<b>C3</b>] Robust Multi-Model Fitting using Density and Preference Analysis </br>
+[<b>C3</b>] <i>Robust Multi-Model Fitting using Density and Preference Analysis</i> </br>
 L. Tiwari, S. Anand and S. Mittal. </br>
 <a href="http://www.accv2016.org/">Asian Conference on Computer Vision (ACCV), 2016</a></br>
 [<a href="https://doi.org/10.1007/978-3-319-54190-7_19">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[<b>C2</b>] Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting </br>
+[<b>C2</b>] <i>Fast Hypothesis Filtering for Multi-Structure Geometric Model Fitting</i> </br>
 L. Tiwari and S. Anand. </br>
 <a href="http://www.2016.ieeeicip.org/ICIP%202016/www2.securecms.com/ICIP2016/default.html/">IEEE International Conference on Image Processing (ICIP), 2016</a></br>
 [<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>
 
-[<b>C1</b>] Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing </br>
+[<b>C1</b>] <i>Robust Camera Captured Image Mosaicking for Document Digitization and OCR Processing</i> </br>
 L. Tiwari, B. Kumar and T. Patnaik. </br>
 <a href="">IEEE International Conference on Information Technology (ICIT), 2014</a></br>
-[<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>  </br> </br>  
+[<a href="https://doi.org/10.1109/ICIP.2016.7533056">Paper</a>], [<a href="">Poster</a>], [<a href="">Code</a>] </br> </br>  
 
 <h4><strong>PhD Forum/Symposium/Workshops</strong></h4>
-[<b>W3</b>] Robust Statistical Methods for Learning and Vision</br>
+[<b>W3</b>] <i>Robust Statistical Methods for Learning and Vision</i></br>
 L. Tiwari. <a href="http://wacv18.uccs.us/">PhD Forum, IEEE Winter Conference on Computer Vision (WACV), 2018</a> </br>
 <b>Mentor:</b> <a href="https://www.vast.uccs.edu/~tboult/resume.html">Prof. Terrance Boult, University of Colorado, Colorado Spring</a> </br>
 
-[<b>W2</b>] Robust Estimation in Geometric Computer Vision</br>
+[<b>W2</b>] <i>Robust Estimation in Geometric Computer Vision</i></br>
 L. Tiwari. <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br>
 
-[<b>W1</b>]  Geometric Model Fiting Game </br>
+[<b>W1</b>]  <i>Geometric Model Fiting Game</i> </br>
 L. Tiwari. <a href="">Symposium on Optimization, 2016, IIT-Kanpur, India</a></br>
 <hr>
+
+<strong><h4>Teaching Assistant:</h4></strong>
+<ul>
+  <li>Head TA: Machine Learning (UG,PG), Monsoon 2017 and 2019</li>
+  <li>Head TA: Computer Vision (UG,PG), Winter 2016, 2017 and 2018</li>
+  <li>Head TA: Computer Graphics (UG,PG), Monsoon 2014 and 2015</li>
+  <li>Head Tutor: Data Structures and Algorithms (UG,PG), Summer Term 2016</li>
+  <li>Head TA: Technical Communication (UG), Winter 2015</li>
+</ul>  
+
+<hr>	
+	
+<strong><h4>Professional Services:</h4></strong>
+<ul>
+	<li><b>Reviewer</b>: Pattern Recognition, WACV</li>
+
+</ul>  
+
+<hr>	
 </section><!--//section-->
 
 
