--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -71,10 +71,10 @@ L. Tiwari, B. Kumar and T. Patnaik. </br>
 <h4><strong>PhD Forum/Symposium/Workshops</strong></h4>
 [<b>W3</b>] <i>Robust Statistical Methods for Learning and Vision</i></br>
 L. Tiwari. <a href="http://wacv18.uccs.us/">PhD Forum, IEEE Winter Conference on Computer Vision (WACV), 2018</a> </br>
-<b>Mentor:</b> <a href="https://www.vast.uccs.edu/~tboult/resume.html">Prof. Terrance Boult, University of Colorado, Colorado Spring</a> </br>
+<b>Mentor:</b> <a href="https://www.vast.uccs.edu/~tboult/resume.html">Prof. Terrance Boult, University of Colorado, Colorado Spring</a> </br></br>
 
 [<b>W2</b>] <i>Robust Estimation in Geometric Computer Vision</i></br>
-L. Tiwari. <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br>
+L. Tiwari. <a href="http://www.iitg.ac.in/icvgip2016/BestPaperAwards.php">Doctoral Symposium at ICVGIP 2016, IIT-Guwahati, India</a></br></br>
 
 [<b>W1</b>]  <i>Geometric Model Fiting Game</i> </br>
 L. Tiwari. <a href="">Symposium on Optimization, 2016, IIT-Kanpur, India</a></br>
@@ -82,11 +82,11 @@ L. Tiwari. <a href="">Symposium on Optimization, 2016, IIT-Kanpur, India</a></br
 
 <strong><h4>Teaching Assistant:</h4></strong>
 <ul>
-  <li>Head TA: Machine Learning (UG,PG), Monsoon 2017 and 2019</li>
-  <li>Head TA: Computer Vision (UG,PG), Winter 2016, 2017 and 2018</li>
-  <li>Head TA: Computer Graphics (UG,PG), Monsoon 2014 and 2015</li>
-  <li>Head Tutor: Data Structures and Algorithms (UG,PG), Summer Term 2016</li>
-  <li>Head TA: Technical Communication (UG), Winter 2015</li>
+  <li>Head TA: Machine Learning (UG,PG), <i>Monsoon 2017 and 2019</i></li>
+  <li>Head TA: Computer Vision (UG,PG), <i>Winter 2016, 2017 and 2018</i></li>
+  <li>Head TA: Computer Graphics (UG,PG), <i>Monsoon 2014 and 2015</i></li>
+  <li>Head Tutor: Data Structures and Algorithms (UG,PG), <i>Summer Term 2016</i></li>
+  <li>Head TA: Technical Communication (UG), <i>Winter 2015</i></li>
 </ul>  
 
 <hr>	
