--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -7,11 +7,10 @@
 
 <strong><h4>Research Interests:</h4></strong>
 <ul>
-<li> Robust Geometric Computer Vision (2D and 3D) </li>
+<li> Robust Statistical Methods for Geometric Computer Vision (2D and 3D)</li>
+<li> SfM/SLAM, 3D Scene Understanding, 3D Reconstruction</li>
 <li> Deep Learning For Geometric Computer Vision</li>
-<li> Robust Statistical Methods For Robust Deep Learning</li>
-<li> Image Based 3D Modeling</li>
-<li> Computer Vision for Autonomous Driving</li>
+<li> <b>Application Domain:</b> Advanced Driver Assistance System and Autonomous Driving</li>
 </ul>
 <hr>
 <strong><h4>Awards and Fellowships:</h4></strong>
