--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -3,13 +3,13 @@
 
 	<p align="justify">I am a 5th year Ph.D. student at , <a href="https://www.iiitd.ac.in"> IIIT-Delhi </a>. I work in the domain of <b>Computer Vision and Deep Learning</b>.
 	I am advised by <a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a>. My Ph.D. is supported by <a href="https://phd.medialabasia.in/">Visvesvarya Ph.D. Fellowship, Govt. of India </a>. </p> </br> 
-<p>	My Ph.D. research work focuses on <b>robust statistical methods for learning and vision</b>.</p> 
+<p>	My Ph.D. research work focuses on <b>robust statistical methods for deep learning and computer vision</b>.</p> 
 
 <strong><h4>Research Interests:</h4></strong>
 <ul>
 <li> Robust Statistical Methods for Geometric Computer Vision (2D and 3D)</li>
 <li> SfM/SLAM, 3D Scene Understanding, 3D Reconstruction</li>
-<li> Deep Learning For Geometric Computer Vision</li>
+<li> Deep Learning for Geometric Computer Vision</li>
 <li> <b>Application Domain:</b> Advanced Driver Assistance System and Autonomous Driving</li>
 </ul>
 <hr>
