--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -31,12 +31,12 @@
 <ul>
 	<li>[5/2019 - 8/2019] <a href="http://www.nec-labs.com/research-departments/media-analytics/media-analytics-people">NEC Laboratories America, Inc.</a> </br>
 	<b>Role:</b> Research Assistant  </br>
-<b>Topic:</b> <i>Real Time Robust SfM in the Wild</i>
+<b>Topic:</b> <i>Real Time Robust SfM in the Wild</i> </br>
         <b>Mentors: </b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
 </br>
-<li>[8/2014 - ]  <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi</a> </br>
+<li>[8/2014 - ]  <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi : Autonomous Last Mile Connectivity for Commuters </a> </br>
 <b>Role:</b> Team member, Computer Vision Module, </br> 
-<b>Topic:</b> <i><b>Swarath</b>: Autonomous Last Mile Connectivity for Commuters</i>, Computer Vision Module
+<b>Topic:</b> <i>Computer Vision Module</i>, 
 <b>Mentor:</b><a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a></li>
 </ul>  
 
