--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -35,8 +35,8 @@
         <b>Mentors: </b><a href="http://www.nec-labs.com/quoc-huy-tran">Dr. Quoc-Huy Tran</a>, <a href="http://www.nec-labs.com/pan-ji">Dr. Pan Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">Prof. Manmohan Chandraker</a> </li>
 </br>
 <li>[8/2014 - ]  <a href="https://www.facebook.com/swarathatiiitd/">Swarath@IIIT-Delhi : Autonomous Last Mile Connectivity for Commuters </a> </br>
-<b>Role:</b> Team member, Computer Vision Module, </br> 
-<b>Topic:</b> <i>Computer Vision Module</i>, 
+<b>Role:</b> Team member </br> 
+<b>Topic:</b> <i>Computer Vision Module</i> </br>
 <b>Mentor:</b><a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a></li>
 </ul>  
 
