--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -45,7 +45,8 @@
 <strong><h4>Patent Applications:</h4></strong>
 <i>Pseudo RGB-D: Exploiting Learned Depth for Robust SfM </i></br>
 <a href="http://www.nec-labs.com/quoc-huy-tran">Q.-H. Tran</a>, L. Tiwari, <a href="http://www.nec-labs.com/pan-ji">P. Ji</a> and <a href="https://cseweb.ucsd.edu/~mkchandraker/">M. Chandraker</a></br>
-<a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a> (provisional application, filed on Aug 2019)   </br>
+<a href="http://www.nec-labs.com/">NEC Laboratories America, Inc.</a>  (provisional application # US/62/892,018, filed on
+Aug 2019)   </br>
 <hr>
 
 <h4><strong>Publications</strong></h4>
