--- a/_includes/aboutme.html
+++ b/_includes/aboutme.html
@@ -3,7 +3,7 @@
 
 	<p align="justify">I am a 5th year Ph.D. student at , <a href="https://www.iiitd.ac.in"> IIIT-Delhi </a>. I work in the domain of <b>Computer Vision and Deep Learning</b>.
 	I am advised by <a href="https://faculty.iiitd.ac.in/~anands/"> Dr. Saket Anand </a>. My Ph.D. is supported by <a href="https://phd.medialabasia.in/">Visvesvarya Ph.D. Fellowship, Govt. of India </a>. </p> </br> 
-<p>	My Ph.D. research work focuses on <b>robust statistical methods for deep learning and computer vision</b>.</p> 
+<p>	My Ph.D. research work focuses on <b>robust statistical methods for deep learning and computer vision</b>. During summer 2019, I was Ph.D. Research Intern at  <a href="https://faculty.iiitd.ac.in/~anands/"> NEC Labs America </a>, I was working with  <a href="https://cs.adelaide.edu.au/~huy/home.php"> Dr. Quoc-Huy Tran </a>,  <a href="https://sites.google.com/site/peterji1990"> Dr. Pan Ji </a>,  <a href="http://www.nec-labs.com/~manu/"> Prof. Manmohan Chandraker </a>. </p> 
 
 <strong><h4>Research Interests:</h4></strong>
 <ul>
