--- a/files/jemdoc.css
+++ b/files/jemdoc.css
@@ -47,7 +47,7 @@
 	min-height: 1000px;
 	max-height: 999999px; /* prevents font boosting */
 	margin: 56px auto 20px; /* top right bottom left */
-	box-shadow: 0 0 7px #122b6d; /*527bbd;*/
+	box-shadow: 0 0 35px #FFE4E1  ; /*527bbd;  122b6d; #FF8C00; #0000FF*/
 	text-align: left;
 	background: #fff;
 	padding: 14px 14px 14px 14px; /* top right bottom left */
@@ -193,7 +193,8 @@ strong {
 
 h1, h2, h3 {
 	/* color: #527bbd; */
-	color: rgb(178 34 34);	
+	/*color: rgb(178 34 34);*/	
+	color: rgb(255 165 0);	
 	margin-top: 0.7em;
 	margin-bottom: 0.3em;
 	padding-bottom: 0.2em;
